weather handler + wiki handler + helper for arg length